--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "Flutter Ext",
-    "version": "1.0",
+    "version": "1.1",
     "description": "We built a Flutter Extension!",
-    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+    "content_security_policy": "script-src 'self' 'unsafe-inline' 'unsafe-eval' https://unpkg.com;  object-src 'self'",
     "browser_action": {
     "default_popup": "index.html",
     "default_icon": "/icons/Icon-192.png"
